--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 
     <title>Color Picker</title>
 </head>
@@ -18,7 +18,7 @@
         <input type="color" id="color">
     </div>
     
-    <script src="main.js"></script>
+    <script src="Main.js"></script>
 
 </body>
 </html>
